# torch_test

./: .gitignore  CMakeLists.txt  README.md  build.sh
aten/: CMakeLists.txt  gtest_main.cpp  test_registeration_handle_raii.cpp  test_serialize.cpp
c++/: CMakeLists.txt  gtest_main.cpp  test_allocator.cpp  test_bool_template.cpp  test_initializer_list.cpp  test_iterator.cpp  test_new_feature.cpp  test_pair.cpp  test_result_of.cpp  test_stl_construct.cpp
c++/demo/: CMakeLists.txt  allocator_v1.cpp  allocator_v2.cpp  allocator_v3.cpp  blocking_queue.cpp  my_malloc.cpp  my_stack.cpp  override_class_new.cpp  override_global_new.cpp  simple_allocator.cpp  stack.cpp
c++/iterator/: category.cpp
c10/: CMakeLists.txt  serialize.h  test_array.cpp  test_optional.cpp  test_scalar.cpp  test_tensor_options.cpp
cmake/: Dependencies.cmake  Summary.cmake
doc/: pytorch中的序列化操作.md  算子注册和分发机制.md
doc/allocator/: bitmap_allocator.md  mt_allocator.md  norm_allocator.md  pool_allocator.md  ptmalloc.md
example/register/: CMakeLists.txt  caffe.cpp  layer_factory.h
op_test/: CMakeLists.txt  test_add.cpp
python/: debug_adaptive.py  debug_add.py
scripts/: gen.sh  gen_code.sh  get_all_type.py
stl/: CMakeLists.txt
stl/include/: tags  vector
stl/include/bits/: allocator.h  c++allocator.h  stl_construct.h
stl/include/ext/: malloc_allocator.h  new_allocator.h  pool_allocator.h
stl/src/: pool_allocator.cc
