set(CXX_TEST_LINKER_LIBS ${COMMON_LINKER_LIBS})
file(GLOB_RECURSE test_srcs ${CMAKE_CURRENT_SOURCE_DIR}/test_*.cpp)
foreach(source ${test_srcs})
  get_filename_component(name ${source} NAME_WE)
  add_executable(${name} ${source} gtest_main.cpp)
  target_link_libraries(${name} ${CXX_TEST_LINKER_LIBS})
endforeach(source)
